--- a/public/app.css
+++ b/public/app.css
@@ -70,7 +70,9 @@ background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
     display: flex;
     flex-direction: column;
 }
-
+.movie__hero{
+    padding: 10px;
+}
 .movie__price {
     background:linear-gradient(to bottom, #A9C9FF 0%, #FFBBEC 100%);
     flex: 0 0 50px;
@@ -81,6 +83,7 @@ background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
     writing-mode: vertical-lr;
     display: flex;
     align-items: center;
+    padding: 10px;
     justify-content: center;
 }
 
